--- a/app/src/main/res/layout/dialog_rating.xml
+++ b/app/src/main/res/layout/dialog_rating.xml
@@ -10,13 +10,40 @@
         android:layout_height="wrap_content"
         android:text="How would you rate the other party?"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:paddingBottom="8dp"/>
+        android:paddingBottom="12dp"/>
 
     <RatingBar
         android:id="@+id/ratingBar"
-        style="?android:attr/ratingBarStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:numStars="5"
         android:stepSize="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:isIndicator="false"
+        android:clickable="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:layout_gravity="center_horizontal"
+        android:paddingBottom="20dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="end">
+
+        <Button
+            android:id="@+id/cancelButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cancel" />
+
+        <Button
+            android:id="@+id/submitButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Submit"
+            android:layout_marginStart="12dp" />
+
+    </LinearLayout>
+
 </LinearLayout>
